force-app/main/default/objects/Trainings__c/Trainings__c.object-meta.xml
<CustomObject>
    <label>כרטיס הדרכה</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>מספר הדרכה</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>כרטיס הדרכות</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>