force-app/main/default/objects/Trainings__c/fields/Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_Time__c</fullName>
    <inlineHelpText>נא לשים לב שהתאריך והשעה תקין!</inlineHelpText>
    <label>מועד</label>
    <type>DateTime</type>
</CustomField>