force-app/main/default/objects/Trainings__c/fields/Max_Students__c.field-meta.xml
<CustomField>
    <fullName>Max_Students__c</fullName>
    <defaultValue>15</defaultValue>
    <label>מקסימום נרשמים</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>