force-app/main/default/objects/Trainings__c/fields/NumberOfStudents__c.field-meta.xml
<CustomField>
    <fullName>NumberOfStudents__c</fullName>
    <defaultValue>0</defaultValue>
    <label>מספר נרשמים</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>