force-app/main/default/objects/Trainings__c/fields/Training_Month__c.field-meta.xml
<CustomField>
    <fullName>Training_Month__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>חודש הדרכה</label>
    <referenceTo>Training_Month__c</referenceTo>
    <relationshipLabel>כרטיסי הדרכות</relationshipLabel>
    <relationshipName>Trainings</relationshipName>
    <type>Lookup</type>
</CustomField>