force-app/main/default/objects/Trainings__c/listViews/Briefing.listView-meta.xml
<ListView>
    <fullName>Briefing</fullName>
    <columns>NAME</columns>
    <columns>Training_Month__c</columns>
    <columns>Date_Time__c</columns>
    <columns>Max_Students__c</columns>
    <columns>NumberOfStudents__c</columns>
    <columns>Device__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Field1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_Time__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>הדרכות בזמן הקרוב</label>
    <language>en_US</language>
</ListView>